--- a/project/login/templates/login/login.html
+++ b/project/login/templates/login/login.html
@@ -6,7 +6,45 @@
     </head>
     <body>
         <div class="container">
-            <p>Hello World!</p>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card mt-5">
+                        <div class="card-header">
+                        <h3 class="text-center">Login</h3>
+                        </div>
+                        <div class="card-body">
+                            {% if form.errors %}
+                            <div class="alert alert-danger" role="alert">
+                                Invalid username or password
+                            </div>
+                            {% endif %}
+                            <form method="post" action="{% url 'login' %}">
+                                {% csrf_token %}
+                                <div class="form-floating mb-3">
+                                    <input type="text" class="form-control" id="id_username" placeholder="Username" required>
+                                    <label for="id_username">Username</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="email" class="form-control" id="id_email" placeholder="name@example.com" required>
+                                    <label for="id_email">Email</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="password" class="form-control" id="id_password" placeholder="Password" required>
+                                    <label for="id_password">Password</label>
+                                </div>
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="id_remember" name="remember">
+                                    <label class="form-check-label" for="id_remember">Remember me</label>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </form>
+                        </div>
+                        <div class="card-footer">
+                            <p class="mt-2 text-center">Ei tiliä? <a href="#">Tee uusi tili!</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
