--- a/project/login/templates/login/login.html
+++ b/project/login/templates/login/login.html
@@ -18,7 +18,7 @@
                                 Käyttäjätunnus tai salasana ei kelpaa.
                             </div>
                             {% endif %}
-                            <form method="post" action="{% url 'login' %}">
+                            <form method="post" action="{% url 'login:login' %}">
                                 {% csrf_token %}
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control" id="id_username" placeholder="Käyttäjätunnus" required>
@@ -42,7 +42,7 @@
                             </form>
                         </div>
                         <div class="card-footer">
-                            <p class="mt-2 text-center">Ei tiliä? <a href="{% url 'registration' %}">Luo uusi tili!</a></p>
+                            <p class="mt-2 text-center">Ei tiliä? <a href="{% url 'registration:registration' %}">Luo uusi tili!</a></p>
                         </div>
                     </div>
                 </div>
