--- a/project/registration/templates/registration/registration.html
+++ b/project/registration/templates/registration/registration.html
@@ -13,7 +13,7 @@
                             <h3 class="card-title">Luo uusi tili</h3>
                         </div>
                         <div class="card-body">
-                            <form method="post" action="{% url 'register' %}">
+                            <form method="post" action="{% url 'registration:registration' %}">
                                 {% csrf_token %}
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control" id="id_username" placeholder="Käyttäjätunnus" required>
@@ -36,7 +36,7 @@
                             </form>
                         </div>
                         <div class="card-footer">
-                            <p class="mt-2 text-center">On jo tili? <a href="{% url 'login' %}">Kirjaudu sisään!</a></p>
+                            <p class="mt-2 text-center">On jo tili? <a href="{% url 'login:login' %}">Kirjaudu sisään!</a></p>
                         </div>
                     </div>
                 </div>
