--- a/project/login/templates/login/login.html
+++ b/project/login/templates/login/login.html
@@ -10,7 +10,7 @@
                 <div class="col-md-6">
                     <div class="card mt-5">
                         <div class="card-header">
-                            <h3 class="card-header">Kirjaudu sisään</h3>
+                            <h3 class="card-title">Kirjaudu sisään</h3>
                         </div>
                         <div class="card-body">
                             {% if form.errors %}
