--- a/project/registration/templates/registration/registration.html
+++ b/project/registration/templates/registration/registration.html
@@ -16,28 +16,33 @@
                             <form method="post" action="{% url 'registration:registration' %}">
                                 {% csrf_token %}
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="id_username" placeholder="Käyttäjätunnus" required>
-                                    <label for="id_username">Käyttäjätunnus</label> </div>
+                                    <input type="text" class="form-control" name="username" placeholder="Käyttäjätunnus" required>
+                                    <label for="username">Käyttäjätunnus</label> </div>
                                 <div class="form-floating mb-3">
-                                    <input type="email" class="form-control" id="id_email" placeholder="nimi@esimerkki.fi" required>
-                                    <label for="id_email">Sähköposti</label>
+                                    <input type="email" class="form-control" name="email" placeholder="nimi@esimerkki.fi" required>
+                                    <label for="email">Sähköposti</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" id="id_password1" placeholder="password1" required>
-                                    <label for="id_password1">Salasana</label>
+                                    <input type="password" class="form-control" name="password1" placeholder="password1" required>
+                                    <label for="password1">Salasana</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" id="id_password2" placeholder="password2" required>
-                                    <label for="id_password2">Salasana uudelleen</label>
+                                    <input type="password" class="form-control" name="password2" placeholder="password2" required>
+                                    <label for="password2">Salasana uudelleen</label>
                                 </div>
                                 <div class="d-grid">
-                                    <button type="submit" class="btn btn-primary">Luo uusi tili</button>
+                                    <button type="submit" class="btn btn-primary" name="create">Luo uusi tili</button>
                                 </div>
                             </form>
                         </div>
                         <div class="card-footer">
                             <p class="mt-2 text-center">On jo tili? <a href="{% url 'login:login' %}">Kirjaudu sisään!</a></p>
                         </div>
+                        {% if consoleClick %}
+                        <div>
+                            <p>Click!</p>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
