--- a/project/login/templates/login/login.html
+++ b/project/login/templates/login/login.html
@@ -18,7 +18,7 @@
                                 Käyttäjätunnus tai salasana ei kelpaa.
                             </div>
                             {% endif %}
-                            <form method="post" action="{% url 'login:login' %}">
+                            <form method="post" action="{% url 'login:login' %}" class="was-validated">
                                 {% csrf_token %}
                                 <div class="form-floating mb-3">
                                     <input type="text" class="form-control" id="id_username" placeholder="Käyttäjätunnus" required>
