--- a/project/registration/templates/registration/registration.html
+++ b/project/registration/templates/registration/registration.html
@@ -13,21 +13,27 @@
                             <h3 class="card-title">Luo uusi tili</h3>
                         </div>
                         <div class="card-body">
-                            <form method="post" action="{% url 'registration:registration' %}">
+                            {% if errorMessage %}
+                            <div class="alert alert-danger alert-dismissable fade show" role="alert">
+                                {{ errorMessage }}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                            {% endif %}
+                            <form method="post" action="{% url 'registration:registration' %}" class="was-validated" autocomplete="off">
                                 {% csrf_token %}
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" name="username" placeholder="Käyttäjätunnus" required>
+                                    <input type="text" class="form-control is-invalid" name="username" required>
                                     <label for="username">Käyttäjätunnus</label> </div>
                                 <div class="form-floating mb-3">
-                                    <input type="email" class="form-control" name="email" placeholder="nimi@esimerkki.fi" required>
+                                    <input type="email" class="form-control" name="email" required>
                                     <label for="email">Sähköposti</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" name="password1" placeholder="password1" required>
+                                    <input type="password" class="form-control" name="password1" required>
                                     <label for="password1">Salasana</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" name="password2" placeholder="password2" required>
+                                    <input type="password" class="form-control" name="password2" required>
                                     <label for="password2">Salasana uudelleen</label>
                                 </div>
                                 <div class="d-grid">
@@ -38,11 +44,6 @@
                         <div class="card-footer">
                             <p class="mt-2 text-center">On jo tili? <a href="{% url 'login:login' %}">Kirjaudu sisään!</a></p>
                         </div>
-                        {% if consoleClick %}
-                        <div>
-                            <p>Click!</p>
-                        </div>
-                        {% endif %}
                     </div>
                 </div>
             </div>
