--- a/project/login/templates/login/login.html
+++ b/project/login/templates/login/login.html
@@ -21,15 +21,15 @@
                             <form method="post" action="{% url 'login:login' %}" class="was-validated">
                                 {% csrf_token %}
                                 <div class="form-floating mb-3">
-                                    <input type="text" class="form-control" id="id_username" placeholder="Käyttäjätunnus" required>
+                                    <input type="text" class="form-control" id="id_username" value="{{username}}" required>
                                     <label for="id_username">Käyttäjätunnus</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="email" class="form-control" id="id_email" placeholder="nimi@esimerkki.fi" required>
+                                    <input type="email" class="form-control" id="id_email" value="{{email}}" required>
                                     <label for="id_email">Sähköposti</label>
                                 </div>
                                 <div class="form-floating mb-3">
-                                    <input type="password" class="form-control" id="id_password" placeholder="Salasana" required>
+                                    <input type="password" class="form-control" id="id_password" value="{{password}}" required>
                                     <label for="id_password">Salasana</label>
                                 </div>
                                 <div class="mb-3 form-check">
